# Model3D

./: .gitignore  CMakeLists.txt  LICENSE  README.md
include/: BaseModel.h  CDT.h  FacePoint.h  Maxflow.hpp  Point3D.h  RichModel.h  UnionFind.hpp  dgp_xinshiqing.hpp
src/: BaseModel.cpp  CDT.cpp  RichModel.cpp
